get nearest settlement added
